2015-03-30 Neel Chauhan <neel@neelc.org>
 * New Version (0.2.2)
 * New Feature: Ability to use '-T' with a suffix of 'M', 'H', or 'D' to run
   for a specified number of minutes, hours, or days

2015-02-20 Neel Chauhan <neel@neelc.org>
 * New Version (0.2.1)
 * New Feature: '-t' option to display a tick number with each tick

2015-01-25 Neel Chauhan <neel@neelc.org>
 * New Version (0.2)
 * New Feature: '-T' option to run for a specified number of ticks
 * New Feature: '-n' option to display each tick on a new line

2015-01-09 Neel Chauhan <neel@neelc.org>
 * Initial Version (0.1)